# character-voicevox-api

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/models/: requests.py
app/api/routes/: manzai.py  scripts.py  synthesis.py
app/core/: config.py  errors.py  handlers.py
app/services/: voicevox.py
manzai/: player.py
